--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tumpraktikum.roboticsimulatorcontroller.MainActivity">
+    tools:context="com.tumpraktikum.roboticsimulatorcontroller.view.MainActivity">
 
     <RelativeLayout
         android:layout_width="368dp"
