--- a/app/src/main/res/layout/activity_controller.xml
+++ b/app/src/main/res/layout/activity_controller.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.tumpraktikum.roboticsimulatorcontroller.view.ControllerActivity"
+    tools:context="com.tumpraktikum.roboticsimulatorcontroller.controller.ControllerActivity"
     >
 
     <Button
