--- a/app/src/main/res/layout/activity_controller.xml
+++ b/app/src/main/res/layout/activity_controller.xml
@@ -39,25 +39,19 @@
         android:text="@string/tipDown"/>
 
     <TextView
-        android:id="@+id/sensorX"
+        android:id="@+id/tvValueBody"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/btnTipUp"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center" />
 
     <TextView
-        android:id="@+id/sensorY"
+        android:id="@+id/tvValueRotation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/sensorX"
-        android:layout_alignRight="@+id/sensorX"
-        android:layout_centerVertical="true" />
-
-    <TextView
-        android:id="@+id/sensorZ"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/sensorY"
-        android:layout_alignStart="@+id/sensorY"
-        android:layout_alignTop="@+id/btnTipDown" />
+        android:layout_alignLeft="@+id/tvValueBody"
+        android:layout_alignStart="@+id/tvValueBody"
+        android:layout_alignTop="@+id/btnTipDown"
+        android:textAlignment="center" />
 </RelativeLayout>
