--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/btnConnect"
+            android:layout_above="@+id/btnTurnOnBluetooth"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="16dp"
             android:layout_marginEnd="16dp"
@@ -47,7 +47,7 @@
             android:textAlignment="center"/>
 
         <Button
-            android:id="@+id/btnConnect"
+            android:id="@+id/btnTurnOnBluetooth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
